--- a/day2.html
+++ b/day2.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="day4style.css" />
   </head>
   <body>
     <h1>Hello This is day 1 Class</h1>
@@ -27,7 +28,7 @@
       <li>TWO</li>
       <li>THREE</li>
     </ul>
-    < action="">
+    <form action="">
       <label for="EMAIL">Email Address</label>
       <input type="email" id="EMAIL" />
       <br />
